fix(*): hide scrollbar

--- a/src/app/(main)/layout-styles.module.scss
+++ b/src/app/(main)/layout-styles.module.scss
@@ -33,6 +33,9 @@
         background: #000;
         padding: 16px 8px;
         margin-bottom: 12px;
+
+        -ms-overflow-style: none;
+         scrollbar-width: none;
     }
 
     @media screen and (max-width: 700px) {
